--- a/.gitmodules
+++ b/.gitmodules
@@ -1,4 +1,4 @@
 [submodule "autorest.powershell"]
 	path = autorest.powershell
 	url = https://github.com/microsoftgraph/autorest.powershell
-	branch = powershell_v2
+	branch = fix/bump-vulnerable-dependencies
