--- a/openApiDocs/v1.0/DeviceManagement.Administration.yml
+++ b/openApiDocs/v1.0/DeviceManagement.Administration.yml
@@ -2244,11 +2244,11 @@ paths:
     get:
       tags:
         - deviceManagement.roleDefinition
-      summary: List deviceAndAppManagementRoleDefinitions
-      description: List properties and relationships of the deviceAndAppManagementRoleDefinition objects.
+      summary: List roleDefinitions
+      description: List properties and relationships of the roleDefinition objects.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-list?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-list?view=graph-rest-1.0
       operationId: deviceManagement_ListRoleDefinition
       parameters:
         - $ref: '#/components/parameters/top'
@@ -2298,11 +2298,11 @@ paths:
     post:
       tags:
         - deviceManagement.roleDefinition
-      summary: Create deviceAndAppManagementRoleDefinition
-      description: Create a new deviceAndAppManagementRoleDefinition object.
+      summary: Create roleDefinition
+      description: Create a new roleDefinition object.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-create?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-create?view=graph-rest-1.0
       operationId: deviceManagement_CreateRoleDefinition
       requestBody:
         description: New navigation property
@@ -2408,11 +2408,11 @@ paths:
     delete:
       tags:
         - deviceManagement.roleDefinition
-      summary: Delete roleDefinition
-      description: Deletes a roleDefinition.
+      summary: Delete deviceAndAppManagementRoleDefinition
+      description: Deletes a deviceAndAppManagementRoleDefinition.
       externalDocs:
         description: Find more info here
-        url: https://learn.microsoft.com/graph/api/intune-rbac-roledefinition-delete?view=graph-rest-1.0
+        url: https://learn.microsoft.com/graph/api/intune-rbac-deviceandappmanagementroledefinition-delete?view=graph-rest-1.0
       operationId: deviceManagement_DeleteRoleDefinition
       parameters:
         - name: roleDefinition-id
@@ -7449,6 +7449,8 @@ components:
               type: string
               description: The URL of the alternate resource that links to this provisioning policy. Read-only.
               nullable: true
+            autopatch:
+              $ref: '#/components/schemas/microsoft.graph.cloudPcProvisioningPolicyAutopatch'
             cloudPcGroupDisplayName:
               type: string
               description: The display name of the Cloud PC group that the Cloud PCs reside in. Read-only.
@@ -8664,6 +8666,15 @@ components:
           type: string
           description: 'The start time of the health check. The timestamp is shown in ISO 8601 format and Coordinated Universal Time (UTC). For example, midnight UTC on Jan 1, 2014 appear as 2014-01-01T00:00:00Z. Read-Only.'
           format: date-time
+      additionalProperties:
+        type: object
+    microsoft.graph.cloudPcProvisioningPolicyAutopatch:
+      title: cloudPcProvisioningPolicyAutopatch
+      type: object
+      properties:
+        autopatchGroupId:
+          type: string
+          nullable: true
       additionalProperties:
         type: object
     microsoft.graph.cloudPcDomainJoinConfiguration:
@@ -14405,7 +14416,7 @@ components:
             description: 'Apple bulk enrollment without user challenge. (DEP, Apple Configurator, Mobile Config)'
             name: appleBulkWithoutUser
           - value: windowsAzureADJoin
-            description: Windows 10 Azure AD Join.
+            description: Windows 10 Entra ID (Azure AD) Join.
             name: windowsAzureADJoin
           - value: windowsBulkUserless
             description: Windows 10 Bulk enrollment through ICD with certificate.
@@ -14414,19 +14425,19 @@ components:
             description: Windows 10 automatic enrollment. (Add work account)
             name: windowsAutoEnrollment
           - value: windowsBulkAzureDomainJoin
-            description: Windows 10 bulk Azure AD Join.
+            description: Windows 10 bulk Entra ID (Azure AD) Join.
             name: windowsBulkAzureDomainJoin
           - value: windowsCoManagement
             description: Windows 10 Co-Management triggered by AutoPilot or Group Policy.
             name: windowsCoManagement
           - value: windowsAzureADJoinUsingDeviceAuth
-            description: Windows 10 Azure AD Join using Device Auth.
+            description: Windows 10 Entra ID (Azure AD) Join using Device Auth.
             name: windowsAzureADJoinUsingDeviceAuth
           - value: appleUserEnrollment
-            description: Device managed by Apple user enrollment
+            description: Indicates the device is enrolled via Apple User Enrollment with Company Portal. It results in an enrollment with a new partition for managed apps and data and which supports a limited set of management capabilities
             name: appleUserEnrollment
           - value: appleUserEnrollmentWithServiceAccount
-            description: Device managed by Apple user enrollment with service account
+            description: Indicates the device is enrolled via Apple User Enrollment with Company Portal using a device enrollment manager user. It results in an enrollment with a new partition for managed apps and data and which supports a limited set of management capabilities
             name: appleUserEnrollmentWithServiceAccount
     microsoft.graph.deviceHealthAttestationState:
       title: deviceHealthAttestationState
@@ -14712,6 +14723,7 @@ components:
         - unknown
         - company
         - personal
+        - unknownFutureValue
       type: string
       description: Owner type of device.
       x-ms-enum:
@@ -14719,14 +14731,17 @@ components:
         modelAsString: false
         values:
           - value: unknown
-            description: Unknown.
+            description: Unknown device owner type.
             name: unknown
           - value: company
-            description: Owned by company.
+            description: Corporate device owner type.
             name: company
           - value: personal
-            description: Owned by person.
+            description: Personal device owner type.
             name: personal
+          - value: unknownFutureValue
+            description: Evolvable enumeration sentinel value. Do not use.
+            name: unknownFutureValue
     microsoft.graph.managementAgentType:
       title: managementAgentType
       enum:
@@ -14915,7 +14930,7 @@ components:
               format: int32
           additionalProperties:
             type: object
-          description: Device Configuration State for a given device.
+          description: Support for this Entity is being deprecated starting May 2026 & will no longer be supported.
     microsoft.graph.deviceLogCollectionResponse:
       allOf:
         - $ref: '#/components/schemas/microsoft.graph.entity'
@@ -19475,6 +19490,7 @@ components:
       properties:
         allowTextOnly:
           type: boolean
+          description: Indicates whether only text is allowed in the meeting chat. Optional.
           nullable: true
       additionalProperties:
         type: object
