--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -78,12 +78,10 @@ stages:
           echo "Building docker images"
           # Format the date to be compatible with Docker tags
           formatted_date=$(date +"%Y%m%d%H%M%S")
-          docker build \
+          docker buildx build \
+            --platform linux/amd64,linux/arm64/v8,linux/arm/v7 \
+            --push \
             -t "$(REGISTRY)/$(IMAGE_NAME):latest" \
             -t "$(REGISTRY)/$(IMAGE_NAME):$formatted_date.$RUNNUMBER" \
             "$(Build.SourcesDirectory)"
-
-          echo "Pushing docker images"
-          docker push "$(REGISTRY)/$(IMAGE_NAME):latest"
-          docker push "$(REGISTRY)/$(IMAGE_NAME):$formatted_date.$RUNNUMBER"
         displayName: 'Build and push docker images'
