--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -164,7 +164,7 @@ extends:
                   publishFeedCredentials: 'microsoftgraph PowerShell Gallery connection'
 
     - stage: PushDockerImageToRegistry
-      condition: and(succeeded(), or(startsWith(variables['Build.SourceBranch'], 'refs/tags/v'), eq(variables['Build.SourceBranch'], variables['PREVIEW_BRANCH'])), not(contains(variables['Build.SourceBranch'], '-preview')))
+      condition: and(or(startsWith(variables['Build.SourceBranch'], 'refs/tags/v'), eq(variables['Build.SourceBranch'], variables['PREVIEW_BRANCH'])), not(contains(variables['Build.SourceBranch'], '-preview')))
       displayName: 'Push docker image'
       jobs:
         - job: PushDockerImage
@@ -240,4 +240,3 @@ extends:
                 "$(Build.SourcesDirectory)"
             displayName: 'Build and push docker images'
 
-    
