--- a/.azure-pipelines/ci-build.yml
+++ b/.azure-pipelines/ci-build.yml
@@ -172,7 +172,9 @@ extends:
         - job: PushDockerImage
           displayName: 'Push docker image'
           pool:
-            vmImage: 'ubuntu-latest'
+            name: Azure-Pipelines-1ESPT-ExDShared
+            image: ubuntu-latest
+            os: linux
           steps:
           - checkout: self
     
